# ArknightsAutoMachine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  COLLABORATION.md  INTERNAL_COLLABORATION.md  README.md  THIRD_PARTY_LICENSES.md  USER_AGREEMENT.md  vcpkg.json  开发.md
.github/: PROTOCOL_REVIEW_GUIDELINES.md
.github/actions/setup-maadeps/: action.yml
.github/workflows/: ci.yml  codeql.yml
.trae/rules/: aamrole.md
cmake/: FindZeroMQ.cmake  compiler_flags.cmake
core/include/aam/core/: logger.hpp  memory_pool.hpp  timer.hpp
core/include/aam/l0/: capture_backend.hpp  frame_buffer.hpp  shm_transport.hpp
core/src/common/: logger.cpp  memory_pool.cpp  timer.cpp
core/src/l0_sensing/: adb_capture.cpp  adb_capture.hpp  capture_backend.cpp  maa_adapter.cpp  maa_adapter.hpp  shm_transport.cpp  win32_capture.cpp  win32_capture.hpp
core/tests/: CMakeLists.txt  test_frame_buffer.cpp  test_main.cpp  test_memory_pool.cpp  test_shm_transport.cpp  test_timer.cpp
develop_plan/: L3-AAM-Script-Language.md  ROADMAP-S.md  ROADMAP.md
docs/WindowsTutorial/: SelectLanguage.md  index.md  index_en.md
docs/WindowsTutorial/Install/Optional/: Feed_en.md  Issue_en.md
docs/WindowsTutorial/Install/Required/: Step1.md  Step1_en.md  Step2.md  Step2_en.md  Step3.md  Step3_en.md  Step4.md  Step4_en.md
docs/WindowsTutorial/Use/FAQ/: ADB.md  ADB_en.md
docs/WindowsTutorial/Use/Game/: Install Arknights.md  Install Arknights_en.md  RegisterAnAccount.md  RegisterAnAccount_en.md  Tutorial_en.md
examples/: CMakeLists.txt  basic_example.cpp
gui/qt/: README.md
gui/qt/src/: mainwindows.py
inference/src/: cli.py
inference/src/data/database/: manager.py
inference/src/data/models/: item.py  stage.py
inference/src/data/providers/: data_manager.py  github_provider.py
inference/src/map/: __init__.py  level_analyzer.py  map_visualizer.py
inference/src/vision/: __init__.py  squad_analyzer.py
install/include/aam/l0/: frame_buffer.hpp
proto/: buf.yaml
scripts/: build.ps1  build_auto.ps1  publish.ps1  setup-maadeps.ps1
scripts/codegen/: protobuf_gen.py
scripts/setup/: install_deps_windows.ps1
tools/capture_test_cli/: CMakeLists.txt  cli_parser.cpp  cli_parser.hpp  main.cpp
tools/capture_test_cli/commands/: benchmark.cpp  benchmark.hpp  capture_test.cpp  capture_test.hpp  compare.cpp  compare.hpp  list_devices.cpp  list_devices.hpp
tools/capture_test_cli/utils/: frame_saver.cpp  frame_saver.hpp  statistics.cpp  statistics.hpp
